--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Admin Dashboard Project in HTML, CSS and JavaScript </title>
+    <title>Responsive Admin Dashboard Project in HTML, CSS and JavaScript</title>
 
     <!-- Material CDN -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <!-- CSS Stylesheet-->
     <link rel="stylesheet" href="styles.css">
@@ -20,9 +21,8 @@
                     <img src="/images/brt2 trans.png" alt="brtLogo">
                     <h2 class="lagos">Lagos<span class="primary">BRT</span></h2>
                     <div class="close" id="close-btn">
-                        <span class="material-icon-sharp">Close</span>
-                        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-                    </div>
+                        <span class="material-icons-sharp">close</span>
+		    </div>
                 </div>
                 <div class="sidebar">
                     <a href="#">
@@ -158,7 +158,7 @@
             <!---------- End of Insights----------->
 
             <div class="recent-trips">
-                <h2>Ticket Sales</h2>
+                <h2>Route Ticket Sales</h2>
                 <table>
                     <thead>
                         <tr>
@@ -260,17 +260,17 @@
                 <button id="menu-btn">
                     <span class="material-icons-sharp">menu</span>
                 </button>
-                <div class="toggler">
-                    <span class="material-icons-sharp">light_mode</span>
+                <div class="toggler" id="toggler-btn">
+                    <span class="material-icons-sharp active">light_mode</span>
                     <span class="material-icons-sharp">dark_mode</span>
                 </div>
                 <div class="profile">
                     <div class="info">
-                        <p>Hello <strong>Paul</strong></p>
+                        <p>Hello <strong>Tony</strong></p>
                         <small>Admin</small>
                     </div>
                     <div class="profile-photo">
-                        <img src="#" alt="user image">
+                        <img src="/images/account_circle_black_24dp.svg" alt="user image">
                     </div>
                 </div>
             </div>
@@ -281,29 +281,68 @@
                     <div class="update">
                         <div class="update-source">
                             <ul class="update-sources">                            
-                                <li><a href="https://twitter.com/lastma">LASTMA Traffic Updates</a></li>
-                                <li><a href="https://twitter.com/lagosneighbourhoodwatch">Neighbourhood Watch Updates</a></li>
-                                <li><a href="https://twitter.com/lastma">Police Traffic Report Updates</a></li>
-                                <li><a href="https://twitter.com/lastma">Gidi Traffic Updates</a></li>
-                                <li><a href="https://twitter.com/lastma">Traffic Butter Updates</a></li>
-                                <li><a href="https://twitter.com/lastma">Traffic Chief Updates</a></li>
+                                <li><a href="https://twitter.com/lastma" target="_blank">LASTMA Traffic Updates</a></li>
+                                <li><a href="https://twitter.com/lagosneighbourhoodwatch" target="_blank">Neighbourhood Watch Updates</a></li>
+                                <li><a href="https://twitter.com/lastma" target="_blank">Police Traffic Report Updates</a></li>
+                                <li><a href="https://twitter.com/lastma" target="_blank">Gidi Traffic Updates</a></li>
+                                <li><a href="https://twitter.com/lastma" target="_blank">Traffic Butter Updates</a></li>                                
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
+            <!------------------------End of Recent Updates -------------------------------->
+            <div class="sales-analytics">
+                <h2>Sales Analytics</h2>
+                <div class="brt-access-card-acquisitions">
+                    <div class="icon">
+                        <span class="material-icons-sharp">credit_score</span>                        
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Access Card Acquisitions</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="brt-access-card-acquisitions">
+                    <div class="icon">
+                        <span class="material-icons-sharp">add_card</span>                        
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Access Card Top-Ups</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="brt-access-card-acquisitions">
+                    <div class="icon">
+                        <span class="material-icons-sharp">groups_2</span>                        
+                    </div>
+                    <div class="right">
+                        <div class="info">
+                            <h3>Customer Details (KYC)</h3>
+                            <small class="text-muted">Last 24 Hours</small>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+
         </div>
 
     </div>
     <footer>
         <div class="footer-footer">
-            <p>Copyright &copy; 2023 | Developed and Powered by Paul, Aromeh Aruwa</p>
+            <p class="copyright">Copyright&copy; 2023 | Developed and Powered by <a href="https://tonyobj.com.ng" target="_blank">Tony Obijeih</a></p>
         </div>
     </footer>
 
     
 
     <!-- JavaScript Source -->
+    <script src="routes.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
